# townley-platform

./: .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  CODEOWNERS  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/web/: package.json
townley-platform/: README-AUDIT-UI-BULK-DELETE.md  README-CRUD-WORKORDERS.md  README-RBAC-AUDIT-LIVE.md  README-STAGETABS-WIRED-AUDIT.md  README-STAGETABS.md  README-WO-DELETE-IMPORT-ROLES.md  README.md  docker-compose.yml
townley-platform/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
townley-platform/backend/alembic/: env.py
townley-platform/backend/alembic/versions/: 20250820_0001_init.py  20250820_0002_add_is_admin.py  20250820_0003_add_deletedat.py  20250820_0004_workorder_audit.py  20250820_0005_add_role_to_users.py
townley-platform/backend/app/: main.py  worker.py
townley-platform/backend/app/api/: README_MAIN_NOTE.txt
townley-platform/backend/app/api/routes/: audit.py  audit_stream.py  auth.py  jobs.py  stages_explicit.py  users.py  workorders.py  workorders_admin.py  workorders_bulk_delete.py  workorders_ext.py
townley-platform/backend/app/core/: admin_deps.py  config.py  db.py  deps.py  deps_role.py  roles.py  security.py
townley-platform/backend/app/jobs/: importers.py  queue.py
townley-platform/backend/app/models/: users.py  workorder_audit.py  workorders.py
townley-platform/backend/app/schemas/: audit.py  auth.py  workorders.py
townley-platform/backend/app/scripts/: create_admin.py
(+89 files in other folders)
