[tool.poetry]
name = "townley-backend"
version = "0.1.0"
description = "FastAPI backend"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.31"
pyodbc = "^5.2.0"
pydantic = "^2.8.0"
python-jose = "^3.3.0"
passlib = {extras=["bcrypt"], version="^1.7.4"}
prometheus-fastapi-instrumentator = "^7.0.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
